[package]
name = "camp_ranger"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = {  version = "1.50.0", features = ["full"] }
clap = { version = "4.5.60", features = ["derive"] }
serde_json = "1.0.149"
log = "0.4.29"
simplelog = "0.10"
reqwest = { version = "0.11", features = ["json"] }
serde = "1.0"
serde_derive = "1.0"
chrono = "0.4"
urlencoding = "2.1.2"